compiler/testData/cli/jvm/diagnosticTests/instanceAccessBeforeSuperCall.out
compiler/testData/cli/jvm/diagnosticTests/instanceAccessBeforeSuperCall.kt:2:26: error: cannot access '<this>' before the instance has been initialized.
    constructor(x: Int = getSomeInt(), other: A = this, header: String = keker) {}
                         ^^^^^^^^^^
compiler/testData/cli/jvm/diagnosticTests/instanceAccessBeforeSuperCall.kt:2:51: error: cannot access '<this>' before the instance has been initialized.
    constructor(x: Int = getSomeInt(), other: A = this, header: String = keker) {}
                                                  ^^^^
compiler/testData/cli/jvm/diagnosticTests/instanceAccessBeforeSuperCall.kt:2:74: error: cannot access '<this>' before the instance has been initialized.
    constructor(x: Int = getSomeInt(), other: A = this, header: String = keker) {}
                                                                         ^^^^^
compiler/testData/cli/jvm/diagnosticTests/instanceAccessBeforeSuperCall.kt:7:20: error: 'this' is not defined in this context.
class B(other: B = this)
                   ^^^^
compiler/testData/cli/jvm/diagnosticTests/instanceAccessBeforeSuperCall.kt:10:32: error: argument type mismatch: actual type is 'Function0<#1>', but 'Int' was expected. Where:
    #1 = Unknown return lambda parameter type
    constructor(x: Int) : this({
                               ^
compiler/testData/cli/jvm/diagnosticTests/instanceAccessBeforeSuperCall.kt:12:9: error: cannot access '<this>' before the instance has been initialized.
        this
        ^^^^
COMPILATION_ERROR
